--- a/src/app/shared/error-sap-dialog/error-sap-dialog.component.html
+++ b/src/app/shared/error-sap-dialog/error-sap-dialog.component.html
@@ -4,7 +4,7 @@
     </div>
     <br>
     <div class="dialog-mensaje">
-        <span class="label-error">{{error}}</span>
+        <span class="label-error" [innerHTML]="error"></span>
     </div>
 
     <div class="dialog-botones">
