--- a/src/app/pt/creacion/gestor/editar-solicitud-gestor-ptc/editar-solicitud-gestor-ptc.component.html
+++ b/src/app/pt/creacion/gestor/editar-solicitud-gestor-ptc/editar-solicitud-gestor-ptc.component.html
@@ -3,10 +3,18 @@
         <a routerLink="/dashboard/principal">
             <mat-icon>home</mat-icon>
         </a>
-        <a routerLink="#"><span class="bread-item"> / Productos terminados </span></a>
-        <a routerLink="#"><span class="bread-item"> / Creación </span></a>
-        <a routerLink="/productosTerminados/consultarSolicitudes"><span class="bread-item"> / Consulta de Solicitudes
-            </span></a>
+        <a routerLink="#"><span class="bread-item" *ngIf="ESCENARIO_NIVEL1==ESCENARIO_NIVEL1_PT"> / Productos terminados </span></a>
+        <a routerLink="#"><span class="bread-item" *ngIf="ESCENARIO_NIVEL1==ESCENARIO_NIVEL1_RS"> / Repuestos y Suministros </span></a>
+        <a routerLink="#"><span class="bread-item" *ngIf="ESCENARIO_NIVEL1==ESCENARIO_NIVEL1_MP"> / Materias Primas </span></a>
+        <a routerLink="#"><span class="bread-item" *ngIf="ESCENARIO_NIVEL1==ESCENARIO_NIVEL1_AO"> / Activos y Otros </span></a>
+
+        <a routerLink="#"><span class="bread-item" *ngIf="TIPO_SOLICITUD==TIPO_SOLICITUD_CREACION"> / Creación </span></a>
+        <a routerLink="#"><span class="bread-item" *ngIf="TIPO_SOLICITUD==TIPO_SOLICITUD_AMPLIACION"> / Ampliación </span></a>
+        <a routerLink="#"><span class="bread-item" *ngIf="TIPO_SOLICITUD==TIPO_SOLICITUD_MODIFICACION"> / Modificación </span></a>
+        <a routerLink="#"><span class="bread-item" *ngIf="TIPO_SOLICITUD==TIPO_SOLICITUD_BLOQUEO"> / Bloqueo </span></a>
+
+<!--         <a routerLink="/productosTerminados/consultarSolicitudes"><span class="bread-item"> / Consulta de Solicitudes
+            </span></a> -->
         <a routerLink="#"><span class="bread-item"> / Editar Solicitud </span></a>
 
         <div class="derecha" colspan="6">
@@ -33,7 +41,7 @@
 
             <mat-grid-list cols="10" rowHeight="75px">
 
-                <mat-grid-tile colspan="4">
+                <mat-grid-tile colspan="3">
                     <div class="izquierda">
                         <mat-form-field appearance="outline">
                             <mat-label>Línea de negocio</mat-label>
@@ -49,7 +57,13 @@
                                 </mat-error>
                             </mat-hint>
                         </mat-form-field>
-                        &nbsp;
+                        
+                    </div>
+                </mat-grid-tile>
+
+
+                <mat-grid-tile colspan="3">
+                    <div class="izquierda">
                         <mat-form-field appearance="outline">
                             <mat-label>Descripción corta</mat-label>
                             <input matInput placeholder="Descripción corta" formControlName="descripcion_corta">
@@ -60,12 +74,6 @@
                             </mat-hint>
                         </mat-form-field>
                     </div>
-                </mat-grid-tile>
-
-                <mat-grid-tile colspan="2">
-                    <!-- <div class="izquierda">
-                        <div class="numeroSolicitud">{{cabeceraSolicitud.correlativo}}</div>
-                    </div> -->
                 </mat-grid-tile>
                 <mat-grid-tile colspan="4">
                     <div class="derecha">
@@ -119,7 +127,11 @@
                         <div class="file-upload">
                             <span class="fontLabel"> Anexo Solicitud:</span>
                             &nbsp;
-                            <button mat-mini-fab color="accent" type="button" (click)="openDialogAnexosSolicitud()"
+                            <button mat-mini-fab color="primary" type="button" (click)="openDialogAnexosSolicitud()" *ngIf="existeAnexoSolicitud" 
+                                matTooltip="Descargar Anexo">
+                                <mat-icon>attach_file</mat-icon>
+                            </button>
+                            <button mat-mini-fab color="accent" type="button" (click)="openDialogAnexosSolicitud()" *ngIf="!existeAnexoSolicitud" 
                                 matTooltip="Descargar Anexo">
                                 <mat-icon>attach_file</mat-icon>
                             </button>
@@ -153,6 +165,17 @@
                 <td mat-cell *matCellDef="let element">{{element[CODIGO_INTERNO_DENOMINACION]}}
                 </td>
             </ng-container>
+            <ng-container matColumnDef={{CODIGO_INTERNO_CENTRO}} *ngIf="TIPO_SOLICITUD!=TIPO_SOLICITUD_CREACION">
+                <th mat-header-cell *matHeaderCellDef> Centro </th>
+                <td mat-cell *matCellDef="let element">{{element[CODIGO_INTERNO_CENTRO+"_valor"]}}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef={{CODIGO_INTERNO_ALMACEN}} *ngIf="TIPO_SOLICITUD!=TIPO_SOLICITUD_CREACION">
+                <th mat-header-cell *matHeaderCellDef> Almacen </th>
+                <td mat-cell *matCellDef="let element">{{element[CODIGO_INTERNO_ALMACEN+"_valor"]}}
+                </td>
+            </ng-container>
+
             <ng-container *ngFor="let campo of listadoCampoReglas" matColumnDef={{campo.codigo_interno}}>
                 <!--                 <div>
                     <th mat-header-cell *matHeaderCellDef> {{campo.etiqueta}} </th>
@@ -191,7 +214,11 @@
             <ng-container matColumnDef="anexos">
                 <th mat-header-cell *matHeaderCellDef> Anexos </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="accent" type="button" (click)="openDialogAnexosMaterial(element)">
+                    
+                    <button mat-icon-button color="primary" type="button" (click)="openDialogAnexosMaterial(element)" *ngIf="element.anexo_material_contador > 0">
+                        <mat-icon>attach_file</mat-icon>
+                    </button>
+                    <button mat-icon-button color="accent" type="button" (click)="openDialogAnexosMaterial(element)" *ngIf="element.anexo_material_contador == 0">
                         <mat-icon>attach_file</mat-icon>
                     </button>
 
@@ -200,7 +227,11 @@
             <ng-container matColumnDef="equivalencias">
                 <th mat-header-cell *matHeaderCellDef> Equivalencias </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="accent" type="button" (click)="openDialogEquivalencias(element)">
+                    
+                    <button mat-icon-button color="primary" type="button" (click)="openDialogEquivalencias(element)" *ngIf="element.equivalencia_material_contador > 0">
+                        <mat-icon>table</mat-icon>
+                    </button>
+                    <button mat-icon-button color="accent" type="button" (click)="openDialogEquivalencias(element)" *ngIf="element.equivalencia_material_contador == 0">
                         <mat-icon>table</mat-icon>
                     </button>
 
