--- a/src/app/pt/creacion/supervisor/ver-solicitud-pendiente-ptc/ver-solicitud-pendiente-ptc.component.html
+++ b/src/app/pt/creacion/supervisor/ver-solicitud-pendiente-ptc/ver-solicitud-pendiente-ptc.component.html
@@ -32,7 +32,7 @@
 
             <mat-grid-list cols="10" rowHeight="75px">
 
-                <mat-grid-tile colspan="4">
+                <mat-grid-tile colspan="3">
                     <div class="izquierda">
                         <mat-form-field appearance="outline">
                             <mat-label>Línea de negocio</mat-label>
@@ -48,7 +48,13 @@
                                 </mat-error>
                             </mat-hint>
                         </mat-form-field>
-                        &nbsp;
+                      
+                        
+                    </div>
+                </mat-grid-tile>
+
+                <mat-grid-tile colspan="3">
+                    <div class="izquierda">
                         <mat-form-field appearance="outline">
                             <mat-label>Descripción corta</mat-label>
                             <input matInput placeholder="Descripción corta" formControlName="descripcion_corta"
@@ -59,13 +65,7 @@
                                 </mat-error>
                             </mat-hint>
                         </mat-form-field>
-                    </div>
-                </mat-grid-tile>
-
-                <mat-grid-tile colspan="2">
-                    <!-- <div class="izquierda">
-                        <div class="numeroSolicitud">{{cabeceraSolicitud.correlativo}}</div>
-                    </div> -->
+                    </div> 
                 </mat-grid-tile>
                 <mat-grid-tile colspan="4">
                     <div class="derecha">
@@ -87,7 +87,11 @@
                         <div class="file-upload">
                             <span class="fontLabel"> Anexo Solicitud:</span>
                             &nbsp;
-                            <button mat-mini-fab color="accent" type="button" (click)="openDialogAnexosSolicitud()"
+                            <button mat-mini-fab color="primary" type="button" (click)="openDialogAnexosSolicitud()" *ngIf="existeAnexoSolicitud" 
+                                matTooltip="Descargar Anexo">
+                                <mat-icon>attach_file</mat-icon>
+                            </button>
+                            <button mat-mini-fab color="accent" type="button" (click)="openDialogAnexosSolicitud()" *ngIf="!existeAnexoSolicitud" 
                                 matTooltip="Descargar Anexo">
                                 <mat-icon>attach_file</mat-icon>
                             </button>
@@ -103,27 +107,6 @@
     <div class="content-table">
         <table mat-table [dataSource]="listadoMateriales" class="mat-elevation-z8">
             <ng-container *ngFor="let campo of listadoCampoReglas" matColumnDef={{campo.codigo_interno}}>
-                <!--                 <div>
-                    <th mat-header-cell *matHeaderCellDef> {{campo.etiqueta}} </th>
-                    <td mat-cell *matCellDef="let element; ">
-                        <span class="label-error"
-                            *ngIf="element[campo.codigo_interno+'_error']">{{element[campo.codigo_interno+"_valor"]}}</span>
-                        <span
-                            *ngIf="campo.codigo_interno!=CODIGO_INTERNO_AMPLIACION && !element[campo.codigo_interno+'_error']">{{element[campo.codigo_interno+'_valor']}}</span>
-                        <span
-                            *ngIf="campo.codigo_interno==CODIGO_INTERNO_AMPLIACION && !element[campo.codigo_interno+'_error']
-                            && element[campo.codigo_interno]">
-                            <mat-icon>done</mat-icon>
-                        </span>
-                        <span
-                            *ngIf="campo.codigo_interno==CODIGO_INTERNO_AMPLIACION && !element[campo.codigo_interno+'_error']
-                            && !element[campo.codigo_interno]">
-                            <mat-icon>&nbsp;</mat-icon>
-                        </span>
-
-                    </td>
-                </div>
- -->
                 <div *ngIf="campo.tipo_objeto==TIPO_OBJETO_CHECKBOX">
                     <th mat-header-cell *matHeaderCellDef> {{campo.etiqueta}} </th>
                     <td mat-cell *matCellDef="let element; ">
@@ -138,19 +121,24 @@
                 <div *ngIf="campo.tipo_objeto!=TIPO_OBJETO_CHECKBOX">
                     <th mat-header-cell *matHeaderCellDef> {{campo.etiqueta}} </th>
                     <td mat-cell *matCellDef="let element; ">
-                        <span class="label-error" *ngIf="isErrorCampo(element,campo.codigo_interno)==true">
+                        <span class="label-error" *ngIf="element[campo.codigo_interno+'_error']">
                             {{element[campo.codigo_interno+"_valor"]}}
                         </span>
-                        <span *ngIf="isErrorCampo(element,campo.codigo_interno)==false">
+                        <span *ngIf="!element[campo.codigo_interno+'_error']">
                             {{element[campo.codigo_interno+'_valor']}}
                         </span>
                     </td>
                 </div>
+
             </ng-container>
             <ng-container matColumnDef="anexos">
                 <th mat-header-cell *matHeaderCellDef> Anexos </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="accent" type="button" (click)="openDialogAnexosMaterial(element)">
+                    
+                    <button mat-icon-button color="primary" type="button" (click)="openDialogAnexosMaterial(element)" *ngIf="element.anexo_material_contador > 0">
+                        <mat-icon>attach_file</mat-icon>
+                    </button>
+                    <button mat-icon-button color="accent" type="button" (click)="openDialogAnexosMaterial(element)" *ngIf="element.anexo_material_contador == 0">
                         <mat-icon>attach_file</mat-icon>
                     </button>
 
@@ -159,10 +147,13 @@
             <ng-container matColumnDef="equivalencias">
                 <th mat-header-cell *matHeaderCellDef> Equivalencias </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button color="accent" type="button" (click)="openDialogEquivalencias(element)">
+                    
+                    <button mat-icon-button color="primary" type="button" (click)="openDialogEquivalencias(element)" *ngIf="element.equivalencia_material_contador > 0">
                         <mat-icon>table</mat-icon>
                     </button>
-
+                    <button mat-icon-button color="accent" type="button" (click)="openDialogEquivalencias(element)" *ngIf="element.equivalencia_material_contador == 0">
+                        <mat-icon>table</mat-icon>
+                    </button>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
