--- a/src/styles.css
+++ b/src/styles.css
@@ -105,6 +105,11 @@ table {
     padding-top: 16px;
     min-width: 1300px;
 }
+
+.cabecera mat-form-field{
+    width: 180% !important;
+    font-size: 95% !important;
+}
 .numeroSolicitud{
 /*     display: block;
     position: relative;
