--- a/src/app/pt/creacion/gestor/editar-material-ptc/editar-material-ptc.component.css
+++ b/src/app/pt/creacion/gestor/editar-material-ptc/editar-material-ptc.component.css
@@ -1,7 +1,7 @@
 .form-detail mat-form-field{
     left:5px !important;
     position: absolute !important;
-    /*  width: 90%;  */
+     width: 90%;  
 
 }
 
